--- a/week2/lab_object_oriented_programming/your-code/lab_object_oriented_programming.ipynb
+++ b/week2/lab_object_oriented_programming/your-code/lab_object_oriented_programming.ipynb
@@ -23,10 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function twodim at 0x000001C3E7D437B8>\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "\n",
     "def twodim(mat):\n",
     "    # This function takes a list of lists and checks that it is of depth 2. \n",
     "    # If the depth is not 2, either return false or return informative errors that let the user know the depth of the list.\n",
@@ -34,8 +44,16 @@
     "    # Output: Boolean (or error)\n",
     "    # Sample Input: [[1,2,3], [4,5,6]]\n",
     "    # Sample Output: True\n",
-    "    \n",
-    "   "
+    "    lst = [[1,2,3], [4,5,6]]\n",
+    "    for element in lst:\n",
+    "        for element2 in lst:\n",
+    "            if element[2] and element2[2]:\n",
+    "                print(True)\n",
+    "            else:\n",
+    "                print(False)\n",
+    "    return(lst, element, element2) \n",
+    "\n",
+    " "
    ]
   },
   {
@@ -44,14 +62,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'list1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-5caa1a9dc455>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m twodim([[1,2,3], \n\u001b[0;32m      2\u001b[0m         \u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m         [7,8,9]])\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-1-df14b7f1571c>\u001b[0m in \u001b[0;36mtwodim\u001b[1;34m(mat)\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;31m# Sample Output: True\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mlist2\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlist1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlist2\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlist1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'list1' is not defined"
+     ]
     }
    ],
    "source": [
@@ -116,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +146,10 @@
     "    # Output: Tuple of rows and columns\n",
     "    #\n",
     "    # Sample input: [[1,2,3],[4,5,6]]\n",
-    "    # Sample Output: (2, 3)\n"
+    "    # Sample Output: (2, 3)\n",
+    "    lst = [[1,2,3],[4,5,6]]\n",
+    "    numrows = len(lst)\n",
+    "    numcols = len(lst[1][2])\n"
    ]
   },
   {
@@ -269,7 +292,11 @@
     "        # Since the rowcolumn function is now a member of the class, make sure to refer to the function as self.rowcolumn\n",
     "        \n",
     "        # Your code here:\n",
-    "        \n",
+    "        self.mat = mat\n",
+    "        self.rows = rows\n",
+    "        self.cols = cols\n",
+    "        self.rowcolumn = rowcolumn\n",
+    "        rowcolumn(self.mat)\n",
     "        \n",
     "    \n",
     "    \n",
@@ -277,6 +304,10 @@
     "    # The only change you need to make is that now we are passing self and mat to the function (make sure self is first).\n",
     "    \n",
     "    # Your code here:\n",
+    "    \n",
+    "    def twodim(self, mat):\n",
+    "        \n",
+    "        \n",
     "\n",
     "    \n",
     "    # Insert the rowcolumn function here.\n",
@@ -342,6 +373,8 @@
     "    # Sample Output: [[1,4], [2,5], [3,6]]\n",
     "    \n",
     "    #return list(map(list, zip(*mat)))\n",
+    "    \n",
+    "    \n",
     "    "
    ]
   },
