--- a/week2/lab_data_cleaning/your-code/lab_data_cleaning.ipynb
+++ b/week2/lab_data_cleaning/your-code/lab_data_cleaning.ipynb
@@ -16,10 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,10 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "engine = create_engine('mysql+pymysql://guest:relational@relational.fit.cvut.cz:3306/stats')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,17 +85,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "driver = 'mysql'\n",
+    "dialect = 'pymysql'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "db_user = 'guest'\n",
+    "db_pw = 'relational'\n",
+    "db_host = 'relational.fit.cvut.cz'\n",
+    "db_port = '3306'\n",
+    "database = 'stats'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mysql_mask = '{0}+{1}://{2}:{3}@{4}:{5}/{6}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mysql_info = mysql_mask.format(\n",
+    "    driver,\n",
+    "    dialect,\n",
+    "    db_user, \n",
+    "    db_pw, \n",
+    "    db_host, \n",
+    "    db_port, \n",
+    "    database)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mysql+pymysql://guest:relational@relational.fit.cvut.cz:3306/stats\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mysql_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mysql_engine = create_engine(mysql_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mysql_conn = mysql_engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['badges', 'comments', 'postHistory', 'postLinks', 'posts', 'tags', 'users', 'votes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mysql_engine.table_names())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,17 +192,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "status_user = 'SELECT * FROM stats.users'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user = pd.read_sql_query(status_user, mysql_engine)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,17 +236,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Reputation</th>\n",
+       "      <th>CreationDate</th>\n",
+       "      <th>DisplayName</th>\n",
+       "      <th>LastAccessDate</th>\n",
+       "      <th>WebsiteUrl</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>AboutMe</th>\n",
+       "      <th>Views</th>\n",
+       "      <th>UpVotes</th>\n",
+       "      <th>DownVotes</th>\n",
+       "      <th>AccountId</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>ProfileImageUrl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-07-19 06:55:26</td>\n",
+       "      <td>Community</td>\n",
+       "      <td>2010-07-19 06:55:26</td>\n",
+       "      <td>http://meta.stackexchange.com/</td>\n",
+       "      <td>on the server farm</td>\n",
+       "      <td>&lt;p&gt;Hi, I'm not really a person.&lt;/p&gt;\\n\\n&lt;p&gt;I'm ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5007</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2010-07-19 14:01:36</td>\n",
+       "      <td>Geoff Dalgas</td>\n",
+       "      <td>2013-11-12 22:07:23</td>\n",
+       "      <td>http://stackoverflow.com</td>\n",
+       "      <td>Corvallis, OR</td>\n",
+       "      <td>&lt;p&gt;Developer on the StackOverflow team.  Find ...</td>\n",
+       "      <td>25</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2010-07-19 15:34:50</td>\n",
+       "      <td>Jarrod Dixon</td>\n",
+       "      <td>2014-08-08 06:42:58</td>\n",
+       "      <td>http://stackoverflow.com</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>&lt;p&gt;&lt;a href=\"http://blog.stackoverflow.com/2009...</td>\n",
+       "      <td>22</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>101</td>\n",
+       "      <td>2010-07-19 19:03:27</td>\n",
+       "      <td>Emmett</td>\n",
+       "      <td>2014-01-02 09:31:02</td>\n",
+       "      <td>http://minesweeperonline.com</td>\n",
+       "      <td>San Francisco, CA</td>\n",
+       "      <td>&lt;p&gt;currently at a startup in SF&lt;/p&gt;\\n\\n&lt;p&gt;form...</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>http://i.stack.imgur.com/d1oHX.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6792</td>\n",
+       "      <td>2010-07-19 19:03:57</td>\n",
+       "      <td>Shane</td>\n",
+       "      <td>2014-08-13 00:23:47</td>\n",
+       "      <td>http://www.statalgo.com</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>&lt;p&gt;Quantitative researcher focusing on statist...</td>\n",
+       "      <td>1145</td>\n",
+       "      <td>662</td>\n",
+       "      <td>5</td>\n",
+       "      <td>54503</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id  Reputation        CreationDate   DisplayName      LastAccessDate  \\\n",
+       "0  -1           1 2010-07-19 06:55:26     Community 2010-07-19 06:55:26   \n",
+       "1   2         101 2010-07-19 14:01:36  Geoff Dalgas 2013-11-12 22:07:23   \n",
+       "2   3         101 2010-07-19 15:34:50  Jarrod Dixon 2014-08-08 06:42:58   \n",
+       "3   4         101 2010-07-19 19:03:27        Emmett 2014-01-02 09:31:02   \n",
+       "4   5        6792 2010-07-19 19:03:57         Shane 2014-08-13 00:23:47   \n",
+       "\n",
+       "                       WebsiteUrl            Location  \\\n",
+       "0  http://meta.stackexchange.com/  on the server farm   \n",
+       "1        http://stackoverflow.com       Corvallis, OR   \n",
+       "2        http://stackoverflow.com        New York, NY   \n",
+       "3    http://minesweeperonline.com   San Francisco, CA   \n",
+       "4         http://www.statalgo.com        New York, NY   \n",
+       "\n",
+       "                                             AboutMe  Views  UpVotes  \\\n",
+       "0  <p>Hi, I'm not really a person.</p>\\n\\n<p>I'm ...      0     5007   \n",
+       "1  <p>Developer on the StackOverflow team.  Find ...     25        3   \n",
+       "2  <p><a href=\"http://blog.stackoverflow.com/2009...     22       19   \n",
+       "3  <p>currently at a startup in SF</p>\\n\\n<p>form...     11        0   \n",
+       "4  <p>Quantitative researcher focusing on statist...   1145      662   \n",
+       "\n",
+       "   DownVotes  AccountId   Age                     ProfileImageUrl  \n",
+       "0       1920         -1   NaN                                None  \n",
+       "1          0          2  37.0                                None  \n",
+       "2          0          3  35.0                                None  \n",
+       "3          0       1998  28.0  http://i.stack.imgur.com/d1oHX.jpg  \n",
+       "4          5      54503  35.0                                None  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(40325, 14)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 40325 entries, 0 to 40324\n",
+      "Data columns (total 14 columns):\n",
+      "Id                 40325 non-null int64\n",
+      "Reputation         40325 non-null int64\n",
+      "CreationDate       40325 non-null datetime64[ns]\n",
+      "DisplayName        40325 non-null object\n",
+      "LastAccessDate     40325 non-null datetime64[ns]\n",
+      "WebsiteUrl         8121 non-null object\n",
+      "Location           11691 non-null object\n",
+      "AboutMe            9379 non-null object\n",
+      "Views              40325 non-null int64\n",
+      "UpVotes            40325 non-null int64\n",
+      "DownVotes          40325 non-null int64\n",
+      "AccountId          40325 non-null int64\n",
+      "Age                8318 non-null float64\n",
+      "ProfileImageUrl    16479 non-null object\n",
+      "dtypes: datetime64[ns](2), float64(1), int64(6), object(5)\n",
+      "memory usage: 4.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "user.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,14 +469,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": []
