--- a/week2/lab_numpy/your-code/lab_numpy.ipynb
+++ b/week2/lab_numpy/your-code/lab_numpy.ipynb
@@ -9,10 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -23,10 +25,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.16.4\n",
+      "mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/marim/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/marim/Anaconda3\\\\Library\\\\include']\n",
+      "blas_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/marim/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/marim/Anaconda3\\\\Library\\\\include']\n",
+      "blas_opt_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/marim/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/marim/Anaconda3\\\\Library\\\\include']\n",
+      "lapack_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/marim/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/marim/Anaconda3\\\\Library\\\\include']\n",
+      "lapack_opt_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/marim/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\include', 'C:\\\\Program Files (x86)\\\\IntelSWTools\\\\compilers_and_libraries_2019.0.117\\\\windows\\\\mkl\\\\lib', 'C:/Users/marim/Anaconda3\\\\Library\\\\include']\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.__version__)\n",
+    "print(np.show_config())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,10 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = np.random.randint(0, 100, size=(2, 3, 5))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,10 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[53 66 25  2 10]\n",
+      "  [55  4 63 15 14]\n",
+      "  [21 54 38 52 23]]\n",
+      "\n",
+      " [[47 11 27  1 53]\n",
+      "  [ 3 64 89  2 18]\n",
+      "  [17 78  5 65 65]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b = np.ones((5, 2, 3))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +140,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +177,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.size)\n",
+    "print(b.size)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +203,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-6ded1fe35e74>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
+   "source": [
+    "z = a + b\n",
+    "\n",
+    "\n",
+    "print(z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,10 +234,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = b.reshape((2,3,5))\n",
+    "\n",
+    "print (c)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,17 +266,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d = a + c"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[54. 67. 26.  3. 11.]\n",
+      "  [56.  5. 64. 16. 15.]\n",
+      "  [22. 55. 39. 53. 24.]]\n",
+      "\n",
+      " [[48. 12. 28.  2. 54.]\n",
+      "  [ 4. 65. 90.  3. 19.]\n",
+      "  [18. 79.  6. 66. 66.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,10 +305,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[53 66 25  2 10]\n",
+      "  [55  4 63 15 14]\n",
+      "  [21 54 38 52 23]]\n",
+      "\n",
+      " [[47 11 27  1 53]\n",
+      "  [ 3 64 89  2 18]\n",
+      "  [17 78  5 65 65]]]\n",
+      "[[[54. 67. 26.  3. 11.]\n",
+      "  [56.  5. 64. 16. 15.]\n",
+      "  [22. 55. 39. 53. 24.]]\n",
+      "\n",
+      " [[48. 12. 28.  2. 54.]\n",
+      "  [ 4. 65. 90.  3. 19.]\n",
+      "  [18. 79.  6. 66. 66.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (a)\n",
+    "\n",
+    "print(d)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,10 +344,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[53. 66. 25.  2. 10.]\n",
+      "  [55.  4. 63. 15. 14.]\n",
+      "  [21. 54. 38. 52. 23.]]\n",
+      "\n",
+      " [[47. 11. 27.  1. 53.]\n",
+      "  [ 3. 64. 89.  2. 18.]\n",
+      "  [17. 78.  5. 65. 65.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = a * c\n",
+    "\n",
+    "print (e)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,10 +376,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Yes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-2ad6485b65ee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mYes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'Yes' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Yes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,10 +404,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90.0\n",
+      "2.0\n",
+      "35.666666666666664\n"
+     ]
+    }
+   ],
+   "source": [
+    "d_max = d.max()\n",
+    "d_min = d.min()\n",
+    "d_mean = d.mean()\n",
+    "\n",
+    "print(d_max)\n",
+    "print(d_min)\n",
+    "print(d_mean)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,10 +436,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f = np.empty([2, 3, 5])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,10 +459,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[53. 66. 25.  2. 10.]\n",
+      "  [55.  4. 63. 15. 14.]\n",
+      "  [21. 54. 38. 52. 23.]]\n",
+      "\n",
+      " [[47. 11. 27.  1. 53.]\n",
+      "  [ 3. 64. 89.  2. 18.]\n",
+      "  [17. 78.  5. 65. 65.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 75.  75.  25.  25.  25.]\n",
+      "  [ 75.  25.  75.  25.  25.]\n",
+      "  [ 25.  75.  75.  75.  25.]]\n",
+      "\n",
+      " [[ 75.  25.  25.   0.  75.]\n",
+      "  [ 25.  75. 100.  25.  25.]\n",
+      "  [ 25.  75.  25.  75.  75.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in range(2):\n",
+    "    for x in range(3):\n",
+    "        for y in range(5):    \n",
+    "            if d[value, x, y] > d_min and d[value, x, y] < d_mean:\n",
+    "                f[value, x, y] = 25\n",
+    "            elif d[value, x, y] > d_mean and d[value, x, y] < d_max:\n",
+    "                f[value, x, y] = 75\n",
+    "            elif d[value, x, y] == d_mean:\n",
+    "                f[value, x, y] = 50\n",
+    "            elif d[value, x, y] == d_max:\n",
+    "                f[value, x, y] = 100\n",
+    "            elif d[value, x, y] == d_min:\n",
+    "                f[value, x, y] = 0\n",
+    "\n",
+    "print(f)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -267,10 +544,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[54. 67. 26.  3. 11.]\n",
+      "  [56.  5. 64. 16. 15.]\n",
+      "  [22. 55. 39. 53. 24.]]\n",
+      "\n",
+      " [[48. 12. 28.  2. 54.]\n",
+      "  [ 4. 65. 90.  3. 19.]\n",
+      "  [18. 79.  6. 66. 66.]]]\n",
+      "[[[ 75.  75.  25.  25.  25.]\n",
+      "  [ 75.  25.  75.  25.  25.]\n",
+      "  [ 25.  75.  75.  75.  25.]]\n",
+      "\n",
+      " [[ 75.  25.  25.   0.  75.]\n",
+      "  [ 25.  75. 100.  25.  25.]\n",
+      "  [ 25.  75.  25.  75.  75.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)\n",
+    "print(f)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -287,6 +588,46 @@
     "        [ 'B',  'D',   'A',  'D', 'D']]])\n",
     "Again, you don't need Numpy in this question.\n",
     "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['D' 'D' 'B' 'B' 'B']\n",
+      "  ['D' 'B' 'D' 'B' 'B']\n",
+      "  ['B' 'D' 'D' 'D' 'B']]\n",
+      "\n",
+      " [['D' 'B' 'B' 'A' 'D']\n",
+      "  ['B' 'D' 'E' 'B' 'B']\n",
+      "  ['B' 'D' 'B' 'D' 'D']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = f.astype(str)\n",
+    "\n",
+    "for i in range(2):\n",
+    "    for j in range(3):\n",
+    "        for k in range(5):\n",
+    "\n",
+    "            if d[i,j,k]>d_min and d[i,j,k]<d_mean:\n",
+    "                f[i,j,k]=\"B\"\n",
+    "            elif d[i,j,k]>d_mean and d[i,j,k]<d_max:\n",
+    "                f[i,j,k]=\"D\"\n",
+    "            elif d[i,j,k]==d_mean:\n",
+    "                f[i,j,k]=\"C\"\n",
+    "            elif d[i,j,k]==d_min:\n",
+    "                f[i,j,k]=\"A\"\n",
+    "            elif d[i,j,k]==d_max:\n",
+    "                f[i,j,k]=\"E\"\n",
+    "\n",
+    "print(f) "
    ]
   },
   {
